--- a/deployment/tinjis.yml
+++ b/deployment/tinjis.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: payment-latest
-        image: nwillems/payment:c0586788a41f323ddfbdd69e4f32df983ba1e67b
+        image: nwillems/payment:5f913a3e93dcc0daee92aaa302eb309290d317e0
         imagePullPolicy: Always
         ports:
         - containerPort: 8000
@@ -27,6 +27,18 @@ spec:
           limits:
             memory: "1000Mi"
             cpu: "500m"
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 9000
+          initialDelaySeconds: 2
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: 9000
+          initialDelaySeconds: 2
+          periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
